Spacing issue 2
Changed spacing of player character

--- a/style.css
+++ b/style.css
@@ -266,7 +266,6 @@ input {
 }
 
 .dialogue-text {
-    padding: 20px;
     pointer-events: none;
 }
 
